--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </head>
     <body>
     <header>
-	<h1><span aria-hidden="true" data-icon="&#xE087;" class="github-icon"></span> Github for Web Designers</h1>
+	<h1><span aria-hidden="true" data-icon="&#xE087;"
+	class="github-icon"></span> Github for Web Designers</h1>
     <ol>
       <li>1</li>
       <li>2</li>
